# mariadb-scylla-storage-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER-DEMO.md  Dockerfile  LICENSE  PROJECT-STRUCTURE.md  README.md  docker-compose.yml  docker-entrypoint.sh  ha_scylla.cc  ha_scylla.h  plugin.cmake  quickstart.sh  scylla_connection.cc  scylla_connection.h  scylla_query.cc  scylla_query.h  scylla_types.cc  scylla_types.h
.github/: copilot-instructions.md
examples/: example.cql  example.sql
